			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2724 2005/02/22 13:54:27 suz Exp $

<200502>
2005-02-22  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/ip6_input.c: fixed PF malfunction for inbound
	  IPv6 traffic on freebsd5.

2005-02-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ipsec.c: (ipsec[46]_in_reject): fixed
	unexpected panic on freebsd5.

Mon Feb  7 12:02:16 JST 2005	keiichi@iijlab.net
	* freebsd4: Upgrade to 4.11-RELEASE

<200501>
2005-01-31  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/sys/netinet6/mip6.c: stop proxy ND on a home agent when 
	the home agent daemon was terminated.
	This problem was found by Christian Vogt<chvogt@tm.uka.de>.

2005-01-23  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/nd6.h: fixed an IPv6 packet output failure 
	  when an ICMPv6 Redirect message announces that the destination
	  is onlink in prior to the packet output.

2005-01-21  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/{nd6.c, nd6_nbr.c}: fixed a loss of fragmented 
	  packets when the corresponding NDP state is not resolved.

2005-01-17  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/icmp6.c: ignores ICMPv6 code field in case of 
	  ICMPv6 Packet-Too-Big.

2005-01-15  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/ip6_output: fixed a path MTU discovery failure 
	  on FreeBSD5.

2005-01-15  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/icmp6.c: fixed an ICMPv6 Redirect message corruption

2005-01-12  suz@crl.hitachi.co.jp
	* kame/kame/dhcp6: implemented stateful non-temporary address 
	  assignment.

2005-01-10  suz@crl.hitachi.co.jp
	* kame/sys/netkey/key.c: fixed an unexpected addr/port matching failure
	  in SA management.

2005-01-07  suz@crl.hitachi.co.jp
	* kame/sys/netinet6/{udp6_var.h, udp6_usrreq.c}: fixed a NetBSD
	  kernel crash by referring to an uninitialized variable.

Wed Jan  5 07:58:00 UTC 2005  itojun@iijlab.net
	* switch NetBSD base version to 2.0.  todo: dccp, sctp, pf, altq

2005-01-01  suz@crl.hitachi.co.jp